[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "otgraph"
version = "0.0.1"
dependencies = [
    "numpy>=1.21",
    "matplotlib==3.10.5",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "netCDF4==1.7.2"
]
authors = [
  { name="Oscar Tovey Garcia", email="otoveyg@gmail.com" },
]
description = "Python matplotlib wrappers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/oscarjtg/otgraph"
Issues = "https://github.com/oscarjtg/otgraph/issues"